# prosp-mcp

./: .gitignore  README.md  pyproject.toml  server.json
src/prosp_mcp/: __init__.py  client.py  server.py
src/prosp_mcp/models/: __init__.py  campaigns.py  leads.py  messaging.py
src/prosp_mcp/tools/: __init__.py  campaigns.py  leads.py  messaging.py
tests/: test_server.py
